--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ body{
 .detals{
     display: flex;
     gap: 100px;
-    margin: 50px 300px;
+    margin: 50px 200px;
 }
 .detals-content{
     text-align: center;
@@ -66,7 +66,8 @@ body{
     background-image: url(images/gradient1.png), url(images/watch.png);
     background-repeat: no-repeat;
     height: 300px;
-    margin-left: 200px;
+    /* width: 1000px; */
+    margin-left: 100px;
 }
 .last-conten{
     padding-top: 50px;
