--- a/style.css
+++ b/style.css
@@ -35,15 +35,17 @@ body{
 
 .about-person{
     display: flex;
-    margin: 150px 200px;
+    margin: 100px 150px;
     justify-content: space-between;
     align-items: center;
-    /* margin: 0 20px; */
 }
-
+.about-header{
+    font-size: 35px;
+    font-weight: 700;
+}
 .person-content{
     margin-left: 100px;
-    padding-top: 120px;
+    /* padding-top: 120px; */
 }
 
 .detals-header{
@@ -51,6 +53,7 @@ body{
     font-size: 30px;
     font-weight: 700;
 }
+
 .detals{
     display: flex;
     gap: 100px;
